[gd_scene load_steps=2 format=3 uid="uid://dvqvrt2v6788p"]

[ext_resource type="Script" path="res://scripts/Elements/NPCThoughtDisplay.gd" id="1_jy2ch"]

[node name="NpcThoughtDisplay" type="Node2D"]
light_mask = 4
visibility_layer = 4
z_index = 100
script = ExtResource("1_jy2ch")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ToughtPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -20.0
offset_right = 64.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ToughtLabel" type="Label" parent="CanvasLayer/ToughtPanel"]
unique_name_in_owner = true
light_mask = 7
visibility_layer = 7
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 10
text = " This is gona be useful."
horizontal_alignment = 1
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0
